[tool.poetry]
name = "acquafuochinofuoco"
version = "0.1.0"
description = ""
authors = ["lordPachy <francescocalzona03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lightning = "^2.4.0"
ipykernel = "^6.29.5"
torchvision = "^0.20.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
